--- a/RGBtheme.css
+++ b/RGBtheme.css
@@ -39,8 +39,8 @@
         --Emoji: '🙂';
         --EmojiHover: '😜';
         --Community: 'purpies';
-        --WelcomeMessage: 'Theme base designed by Purple Wizard.';
-        --Watermark: 'Made with 💖 by Purple Wizard';
+        --WelcomeMessage: 'Theme base designed by Purple Wizard & absol.';
+        --Watermark: 'Made with 💖 by Purple Wizard & absol
         --EditStatus: 'Put another status';
         --Folders: '📁';
         --FoldersOpen: '💠';
